# EmuBoy

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: c-cpp.yml  rust.yml
include/: RegisterFile.hpp  cartridge.hpp  clock.hpp  controls.hpp  cpu.hpp  io.hpp  lcd.hpp  memory.hpp  ppu.hpp  utilities.hpp
src/: RegisterFile.cpp  cartridge.cpp  cartridge.rs  clock.cpp  controls.cpp  cpu.cpp  cpu.rs  io.cpp  lcd.cpp  lcd.rs  main.cpp  main.rs  memory.cpp  memory.rs  ppu.cpp  ppu.rs  utilities.cpp
tests/: RegisterFile_test.cpp  cpu_test.cpp
